--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <div class="contactinfo">
             <h1>Contact me</h1>
             <div class="title">
-                Interested in me?
+                <span>Interested in me?</span>
             </div>
             <div class="QandA">
                 <p> Your Name</p>
@@ -36,7 +36,7 @@
                 <p> You want to say:</p>
                 <p><input type="text" name="content" /></p>
 
-                <input type="submit" value="Submit" />
+                <input type="submit" value="Submit" id="submitbutton"/>
             </div>
         </div>
     </main>
