--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/contactstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact Information</title>
+    <title>Contact</title>
 </head>
 <body>
 <div class="container">
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="travel.html">FootPrint</a></li>
-                <li><a href="game.html">Hunt</a></li>
+                <li><a href="hunt.html">Hunt</a></li>
                 <li><a href="contact.html" id="current_html">Contact</a></li>
             </ul>
         </nav>
