--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
     <link rel="stylesheet" type="text/css" href="css/gamestyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home Page</title>
+    <title>Home</title>
 </head>
 <body>
 <div class="container">
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html" id="current_html">Home</a></li>
                 <li><a href="travel.html">FootPrint</a></li>
-                <li><a href="game.html">Hunt</a></li>
+                <li><a href="hunt.html">Hunt</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -27,39 +27,50 @@
 
     </header>
     <main id="main">
-        <div id="img-header">
-            <div id="header_content">
-                <p><strong> Keep Learning, Keep Going</strong></p>
-            </div>
-        </div>
+        <h1>
+            <p>SI501 Contextual Inquiry: Hunt</p>
+        </h1>
         <div class="self_introduction">
             <div class="title">
                 About me
             </div>
-            <div id="self_introduction_selfie">
-                <img src="graph/index/basic_selfie.jpg" alt="selfie taken on Wutai Mountain">
+
+            <div class="content">
+                <div class="bascontent">
+
+                    <img src="graph/index/basic_selfie.jpg" id="self_introduction_selfie" alt="selfie taken on Wutai Mountain">
+
+                    <div id="basic_information">
+                        <p>Chao Xu</p>
+                        <p>Mobile: 7344507749(US)  13957446055(China)</p>
+                        <p>Email: xuchaozj@umich.edu</p>
+                        <p>B.S.E in Shanghai Jiao Tong University</p>
+                        <p>Electrical and Computer Engineering </p>
+                    </div>
+                </div>
+
+                <div class="title">
+                    Job Seek
+                </div>
+
+                <div id="job_seek">
+                    <ul>
+                        <li>Software Engineer Intern in 2022 Summer</li>
+                        <li>Data Analyst Intern in 2022 Summer</li>
+                    </ul>
+                </div>
+                <div class="title">
+                    Language
+                </div>
+                <div id="Language">
+                    <div class="label" >CPP</div>
+                    <div class="label" >PYTHON</div>
+                    <div class="label" >JAVA</div>
+                    <div class="label" >HTML</div>
+                    <div class="label" >CSS</div>
+                </div>
             </div>
-            <div id="basic_information">
-                <p>Chao Xu</p>
-                <p>Mobile: 7344507749(US)  13957446055(China)</p>
-                <p>Email: xuchaozj@umich.edu</p>
-                <p>B.S.E in Shanghai Jiao Tong University</p>
-                <p>Electrical and Computer Engineering </p>
-            </div>
-            <div id="job_seek">
-                <ul>
-                    <li>Software Engineer Intern in 2022 Summer</li>
-                    <li>Data Analyst Intern in 2022 Summer</li>
-                </ul>
-            </div>
-            <div id="Language">
-                <lable>CPP</lable>
-                <lable>PYTHON</lable>
-                <lable>JAVA</lable>
-                <lable>HTML</lable>
-                <lable>CSS</lable>
-                <lable>JAVASCRIPT</lable>
-            </div>
+
         </div>
 <!--
         <div class="otherpages">
@@ -76,6 +87,10 @@
 -->
 
     </main>
+    <footer>
+        <p>University of Michigan School of Information </p>
+        <p>&copy; Chao Xu - Web Design 2021</p>
+    </footer>
 
 </div>
 </body>
