--- a/travel.html
+++ b/travel.html
@@ -16,97 +16,107 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="travel.html" id="current_html">FootPrint</a></li>
-                <li><a href="game.html">Hunt</a></li>
+                <li><a href="hunt.html">Hunt</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main id="main">
         <h1>
-            <p>Foot Print</p>
+            Foot Print
         </h1>
         <div class="Explain">
+            <div class="title">
+                Introduction
+            </div>
             In this page I will display some of tourist spots  I have ever been.
         </div>
 
 
-
-        <div id="songshan">
-            <div class="titleofspots">
-                <a href="https://en.wikipedia.org/wiki/Mount_Song">Mount Song</a>
-            </div>
-            <div class="descriptionofspots">
-                Mountain Song is where Shaolin Temple is located.
-            </div>
-            <div class="imgofspots">
-                <img src="graph/travel/songshanfullscreen.jpg" alt="full scene of Songshan" class="fullscene">
-                <div class="gallery">
-                    <div class="pair">
-                        <p></p>
-                        <img src="graph/travel/songshan1.jpg" alt="scene of songshan">
-                        <img src="graph/travel/songshan2.jpg" alt="gate of shaolin temple">
+        <div class="spots">
+            <div id="songshan" class="spot">
+                <div class="titleofspots">
+                    <a href="https://en.wikipedia.org/wiki/Mount_Song">Mount Song</a>
+                </div>
+                <div class="descriptionofspots">
+                    Mountain Song is where Shaolin Temple is located.
+                </div>
+                <div class="imgofspots">
+                    <img src="graph/travel/songshanfullscreen.jpg" alt="full scene of Songshan" class="fullscene">
+                    <div class="gallery">
+                        <div class="pair">
+                            <p></p>
+                            <img src="graph/travel/songshan1.jpg" alt="scene of songshan">
+                            <img src="graph/travel/songshan2.jpg" alt="gate of shaolin temple">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div id="wutai">
-            <div class="titleofspots">
-                <a href="https://en.wikipedia.org/wiki/Mount_Wutai">Mount Wutai</a>
-            </div>
-            <div class="descriptionofspots">
-                Mountain Wutai is regarded as the home of Mañjuśrī, the Bodhisattva of wisdom.
-            </div>
-            <div class="imgofspots">
-                <img src="graph/travel/wutaifullscene.jpeg" alt="full scene of Wutai" class="fullscene">
-                <div class="gallery">
-                    <div class="pair">
-                        <p></p>
-                        <img src="graph/travel/dailuoding1.jpeg" alt="gate of dailuoding">
-                        <img src="graph/travel/dailuoding2.png" alt="wu fang wen shu">
+            <div id="wutai" class="spot">
+                <div class="titleofspots">
+                    <a href="https://en.wikipedia.org/wiki/Mount_Wutai">Mount Wutai</a>
+                </div>
+                <div class="descriptionofspots">
+                    Mountain Wutai is regarded as the home of Mañjuśrī, the Bodhisattva of wisdom.
+                </div>
+                <div class="imgofspots">
+                    <img src="graph/travel/wutaifullscene.jpeg" alt="full scene of Wutai" class="fullscene">
+                    <div class="gallery">
+                        <div class="pair">
+                            <p></p>
+                            <img src="graph/travel/dailuoding1.jpeg" alt="gate of dailuoding">
+                            <img src="graph/travel/dailuoding2.png" alt="wu fang wen shu">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-
-        <div id="putuo">
-            <div class="titleofspots">
-                <a href="https://en.wikipedia.org/wiki/Mount_Putuo">Mount Putuo</a>
-            </div>
-            <div class="descriptionofspots">
-                Mountain Putuo is the awakening position of bodhisattva Guanyin.
-            </div>
-            <div class="imgofspots">
-                <img src="graph/travel/putuofullscene.jpg" alt="full scene of Putuo" class="fullscene">
-                <div class="gallery">
-                    <div class="pair">
-                        <p></p>
-                        <img src="graph/travel/putuo1.jpg" alt="gate of temple">
-                        <img src="graph/travel/putuo2.jpg" alt="nanhai Guan yin">
+            <div id="putuo" class="spot">
+                <div class="titleofspots">
+                    <a href="https://en.wikipedia.org/wiki/Mount_Putuo">Mount Putuo</a>
+                </div>
+                <div class="descriptionofspots">
+                    Mountain Putuo is the awakening position of bodhisattva Guanyin.
+                </div>
+                <div class="imgofspots">
+                    <img src="graph/travel/putuofullscene.jpg" alt="full scene of Putuo" class="fullscene">
+                    <div class="gallery">
+                        <div class="pair">
+                            <p></p>
+                            <img src="graph/travel/putuo1.jpg" alt="gate of temple">
+                            <img src="graph/travel/putuo2.jpg" alt="nanhai Guan yin">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-
-        <div id="santorini">
-            <div class="titleofspots">
-                <a href="https://en.wikipedia.org/wiki/Santorini">Santorini Island</a>
-            </div>
-            <div class="descriptionofspots">
-                Santorini island is famous for the incredible sunset
-            </div>
-            <div class="imgofspots">
-                <img src="graph/travel/Santorinifullscreen.jpg" alt="full scene of Santorini" class="fullscene">
-                <div class="gallery">
-                    <div class="pair">
-                        <p></p>
-                        <img src="graph/travel/Santorini1.jpg" alt="sunset of oia">
-                        <img src="graph/travel/Santorini2.jpg" alt="Incredible Town">
+            <div id="santorini" class="spot">
+                <div class="titleofspots">
+                    <a href="https://en.wikipedia.org/wiki/Santorini">Santorini Island</a>
+                </div>
+                <div class="descriptionofspots">
+                    Santorini island is famous for the incredible sunset
+                </div>
+                <div class="imgofspots">
+                    <img src="graph/travel/Santorinifullscreen.jpg" alt="full scene of Santorini" class="fullscene">
+                    <div class="gallery">
+                        <div class="pair">
+                            <p></p>
+                            <img src="graph/travel/Santorini1.jpg" alt="sunset of oia">
+                            <img src="graph/travel/Santorini2.jpg" alt="Incredible Town">
+                        </div>
                     </div>
                 </div>
             </div>
+
+
+
+
+
+
+
+
         </div>
 
     </main>
