--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
-    <link rel="stylesheet" type="text/css" href="css/gamestyle.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
 </head>
@@ -28,7 +29,7 @@
     </header>
     <main id="main">
         <h1>
-            <p>SI501 Contextual Inquiry: Hunt</p>
+            <p>Home Page</p>
         </h1>
         <div class="self_introduction">
             <div class="title">
