--- a/travel.html
+++ b/travel.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/travelstyle.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Travel</title>
 </head>
