--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/contactstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="graph/logo.jpg">
     <title>Contact</title>
 </head>
 <body>
