--- a/hunt.html
+++ b/hunt.html
@@ -61,7 +61,7 @@
                 </div>
                 <script>
                     function myFunction1() {
-                        document.getElementById("urlans1").style.color="red";
+                        document.getElementById("urlans1").style.color="#6B0000";
                     }
                 </script>
             </div>
@@ -82,7 +82,7 @@
                 </div>
                 <script>
                     function myFunction2() {
-                        document.getElementById("urlans2").style.color="red";
+                        document.getElementById("urlans2").style.color="#6B0000";
                     }
                 </script>
             </div>
@@ -100,7 +100,7 @@
                 </div>
                 <script>
                     function myFunction3() {
-                        document.getElementById("urlans3").style.color="red";
+                        document.getElementById("urlans3").style.color="#6B0000";
                     }
                 </script>
             </div>
@@ -127,7 +127,7 @@
             </div>
             <script>
                 function myFunction4() {
-                    document.getElementById("urlans4").style.color="red";
+                    document.getElementById("urlans4").style.color="#6B0000";
                 }
             </script>
         </div>
