--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="skip"><a href="#footer">Jump to Content</a></div>
+    <div class="skip"><a href="#main">Jump to Content</a></div>
     <header>
         <img src="graph/caoshu.png" alt="grass script of 徐超">
         <nav>
@@ -30,12 +30,12 @@
                 <span>Interested in me?</span>
             </div>
             <div class="QandA">
-                <p> Your Name</p>
-                <p><input type="text" name="name" /></p>
-                <p> Email</p>
-                <p><input type="text" name="email" /></p>
-                <p> You want to say:</p>
-                <p><input type="text" name="content" /></p>
+                <label for="name">You Name:</label>
+                <input type="text" name="name" id="name"/>
+                <label for="email">Email Address:</label>
+                <input type="text" name="email" id="email"/>
+                <label for="youwanttosay"> You want to say:</label>
+                <input type="text" name="content" id="youwanttosay"/>
 
                 <input type="submit" value="Submit" id="submitbutton"/>
             </div>
