--- a/hunt.html
+++ b/hunt.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/huntstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="graph/logo.jpg">
+    <link rel="shortcut icon" href="graph/logo.png">
     <title>Hunt</title>
 </head>
 <body>
@@ -26,7 +28,7 @@
     </header>
     <main id="main">
         <h1>
-            <p>SI501 Contextual Inquiry: Hunt</p>
+            <span>Hunt</span>
         </h1>
         <div class="title">
             Introduction
@@ -66,10 +68,10 @@
                 </script>
             </div>
             <div class="urlans" id="urlans1">
-                https://kentarotoyama.org/501.txt
+                <p>https://kentarotoyama.org/501.txt</p>
             </div>
 
-            <div class="challenge">
+            <div class="challenge huntwhite">
                 <div class="challengecontent">
                     Based on the <a href="https://kentarotoyama.org/501.txt">decoded website</a> we gain from challenge 1,
                     we need to decode the following puzzle for following challenges(click it to see the answer).
@@ -86,8 +88,8 @@
                     }
                 </script>
             </div>
-            <div class="urlans" id="urlans2">
-                https://kentarotoyama.org/melissachalmers/mask.doc
+            <div class="urlans huntwhite" id="urlans2">
+                <p>https://kentarotoyama.org/melissachalmers/mask.doc</p>
             </div>
 
             <div class="challenge">
@@ -106,10 +108,10 @@
             </div>
 
             <div class="urlans" id="urlans3">
-                Go to the information booth that is twenty meters north of the Burton Memorial Tower.
+                <p>Go to the information booth that is twenty meters north of the Burton Memorial Tower.</p>
             </div>
 
-            <div class="challenge">
+            <div class="challenge huntwhite">
                 <div class="challengecontent">
                     What we find in the position is another decoding task.
                 </div>
@@ -122,8 +124,8 @@
                 </div>
             </div>
 
-            <div class="urlans" id="urlans4">
-                https://considerairportsecurity.wordpress.com/2021/08/30/go-blue/
+            <div class="urlans huntwhite" id="urlans4">
+                <p>https://considerairportsecurity.wordpress.com/2021/08/30/go-blue/</p>
             </div>
             <script>
                 function myFunction4() {
