--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/indexstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="graph/logo.jpg">
+    <link rel="shortcut icon" href="graph/logo.png">
     <title>Home</title>
 </head>
 <body>
@@ -28,8 +30,21 @@
 
     <main id="main">
         <h1>
-            <p>Home Page</p>
+            Home Page
         </h1>
+        <div class="Introduction">
+            <div class="title">
+                Welcome to Chao's portfolio!
+            </div>
+            <div class="Explain">
+                This portfolio is designed for the final project for the course SI 539. Besides my
+                basic <a href="#basic_information">personal information</a>, I will show some <a href="travel.html">fantastic destinations</a> I have ever been and one
+                interesting <a href="hunt.html">course hunt activity</a>.
+                <br>
+                If you are interested in my experience, then feel free to <a href="contact.html">contact me</a>.
+
+            </div>
+        </div>
         <div class="self_introduction">
             <div class="title">
                 About me
@@ -46,18 +61,21 @@
                         <p>Email: xuchaozj@umich.edu</p>
                         <p>B.S.E in Shanghai Jiao Tong University</p>
                         <p>Electrical and Computer Engineering </p>
+                        <p>MSI in University of Michigan School of Information</p>
+                        <p>Information Science</p>
                     </div>
                 </div>
 
                 <div class="title">
-                    Job Seek
+                    Hobbies
                 </div>
 
-                <div id="job_seek">
-                    <ul>
-                        <li>Software Engineer Intern in 2022 Summer</li>
-                        <li>Data Analyst Intern in 2022 Summer</li>
-                    </ul>
+                <div id="hobbies">
+                    <div class="label" >Jogging</div>
+                    <div class="label" >Pingpong</div>
+                    <div class="label" >Animation</div>
+                    <div class="label" >Travel</div>
+
                 </div>
                 <div class="title">
                     Language
@@ -68,23 +86,12 @@
                     <div class="label" >JAVA</div>
                     <div class="label" >HTML</div>
                     <div class="label" >CSS</div>
+                    <div class="label" >SCALA</div>
                 </div>
             </div>
 
         </div>
-<!--
-        <div class="otherpages">
-            <div class="title">
-                You may also like:
-            </div>
-            <div class="onepage">
-                <div class="pagetitle">
-                    Interesting course tasks
-                </div>
-                <img src="">
-            </div>
-        </div>
--->
+
 
     </main>
     <footer>
