--- a/travel.html
+++ b/travel.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/travelstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="graph/logo.jpg">
+    <link rel="shortcut icon" href="graph/logo.png">
     <title>Travel</title>
 </head>
 <body>
@@ -28,9 +30,9 @@
             Foot Print
         </h1>
 
-            <div class="title">
-                Introduction
-            </div>
+        <div class="title">
+            Introduction
+        </div>
         <div class="Explain">
             In this page I will display some of tourist spots I have ever been.
         </div>
@@ -44,8 +46,36 @@
                 <div class="descriptionofspots">
                     Mountain Song is where Shaolin Temple is located.
                 </div>
+
+
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+
+                            <div class="flip-card-front">
+                                <a href="http://www.songshancn.com/worldwide/en/">
+                                    <img src="graph/travel/songshanfullscreen.jpg" alt="full scene of Songshan">
+                                </a>
+                            </div>
+
+                        <div class="flip-card-back">
+                            <a href="http://www.songshancn.com/worldwide/en/">
+                                The ancient name of Mount Song , also known as Waifang , Songgao , and Sublime , is located in the central part of Henan Province and belongs to the Funiu Mountains . It is located in the northwest of Dengfeng City and is the Zhongyue of the Five Mountains .
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="imgofspots">
-                    <img src="graph/travel/songshanfullscreen.jpg" alt="full scene of Songshan" class="fullscene">
+                    <img src="graph/travel/songshanfullscreen.jpg" alt="full scene of Wutai" class="fullscene">
+
+
+
+
+
+
+
                     <div class="gallery">
                         <div class="pair">
                             <p></p>
@@ -63,6 +93,24 @@
                 <div class="descriptionofspots">
                     Mountain Wutai is regarded as the home of Mañjuśrī, the Bodhisattva of wisdom.
                 </div>
+
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <a href="https://www.tripadvisor.com/Attraction_Review-g1122107-d321163-Reviews-Wutai_Shan_Five_Terrace_Mountain-Wutai_County_Shanxi.html">
+                                    <img src="graph/travel/wutaifullscene.jpeg" alt="full scene of Wutai">
+                                </a>
+                            </div>
+
+                        <div class="flip-card-back">
+                            <a href="https://www.tripadvisor.com/Attraction_Review-g1122107-d321163-Reviews-Wutai_Shan_Five_Terrace_Mountain-Wutai_County_Shanxi.html">
+                                Wutai Mountain is the only Chinese Green Temple ( Chinese Buddhism ) Huang Temple ( Tibetan Buddhism ) Buddhist temple each other, so the Han Mongolian Tibetan and other peoples in this harmonious sharing.    </a>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="imgofspots">
                     <img src="graph/travel/wutaifullscene.jpeg" alt="full scene of Wutai" class="fullscene">
                     <div class="gallery">
@@ -82,6 +130,23 @@
                 <div class="descriptionofspots">
                     Mountain Putuo is the awakening position of bodhisattva Guanyin.
                 </div>
+
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <a href="http://www.putuo.org.cn/English/">
+                                    <img src="graph/travel/putuofullscene.jpg" alt="full scene of Putuo">
+                                </a>
+                            </div>
+
+                        <div class="flip-card-back">
+                            <a href="http://www.putuo.org.cn/English/">
+                                The Putuo Mountain Scenic Area is known as the Haitian Buddha Kingdom and the Holy Land of the South China Sea. It is in the first batch of national key scenic spots. The highest point is Foding Mountain , about 300 meters above sea level.
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="imgofspots">
                     <img src="graph/travel/putuofullscene.jpg" alt="full scene of Putuo" class="fullscene">
                     <div class="gallery">
@@ -100,6 +165,25 @@
                 </div>
                 <div class="descriptionofspots">
                     Santorini island is famous for the incredible sunset
+                </div>
+
+
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+
+                            <div class="flip-card-front">
+                                <a href="https://www.santorini.net/">
+                                    <img src="graph/travel/Santorinifullscreen.jpg" alt="full scene of Santorini">
+                                </a>
+                            </div>
+
+                        <div class="flip-card-back">
+                            <a href="https://www.santorini.net/">
+                                Santorini is regarded by many as the Greek island of their dreams, and countless beautiful pictures about the island appear in countless travel brochures and Instagram photos. However, Santorini is more than just a small blue island. She is beautiful and at the same time mysterious.
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="imgofspots">
                     <img src="graph/travel/Santorinifullscreen.jpg" alt="full scene of Santorini" class="fullscene">
