--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/contactstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="graph/logo.jpg">
+    <link rel="shortcut icon" href="graph/logo.png">
     <title>Contact</title>
 </head>
 <body>
@@ -30,12 +32,14 @@
                 <span>Interested in me?</span>
             </div>
             <div class="QandA">
-                <label for="name">You Name:</label>
-                <input type="text" name="name" id="name"/>
+                <label for="fname">First Name:</label>
+                <input type="text" name="name" id="fname" placeholder="Enter Your First Name"/>
+                <label for="lname">Last Name:</label>
+                <input type="text" name="name" id="lname" placeholder="Enter Your Last Name"/>
                 <label for="email">Email Address:</label>
-                <input type="text" name="email" id="email"/>
+                <input type="text" name="email" id="email" placeholder="Enter Your Email Address"/>
                 <label for="youwanttosay"> You want to say:</label>
-                <input type="text" name="content" id="youwanttosay"/>
+                <input type="text" name="content" id="youwanttosay" placeholder="What do you want to say?"/>
 
                 <input type="submit" value="Submit" id="submitbutton"/>
             </div>
