--- a/hunt.html
+++ b/hunt.html
@@ -11,7 +11,12 @@
     <link rel="shortcut icon" href="graph/logo.png">
     <title>Hunt</title>
 </head>
-<body>
+<script>
+    function phone() {
+        alert("Hello! If you are using mobile, please place the phone HOZIRONTALLY!");
+    }
+</script>
+<body onload="phone()">
 <div class="container">
     <div class="skip"><a href="#main">Jump to Content</a></div>
     <header>
