--- a/travel.html
+++ b/travel.html
@@ -49,7 +49,7 @@
                     <a href="https://en.wikipedia.org/wiki/Mount_Song">Mount Song</a>
                 </div>
                 <div class="descriptionofspots">
-                    Mountain Song is where Shaolin Temple is located.
+                    Mountain Song is where Shaolin Temple is located. (Hover on the image to see more)
                 </div>
 
 
@@ -96,7 +96,7 @@
                     <a href="https://en.wikipedia.org/wiki/Mount_Wutai">Mount Wutai</a>
                 </div>
                 <div class="descriptionofspots">
-                    Mountain Wutai is regarded as the home of Mañjuśrī, the Bodhisattva of wisdom.
+                    Mountain Wutai is regarded as the home of Mañjuśrī, the Bodhisattva of wisdom. (Hover on the image to see more)
                 </div>
 
 
@@ -133,7 +133,7 @@
                     <a href="https://en.wikipedia.org/wiki/Mount_Putuo">Mount Putuo</a>
                 </div>
                 <div class="descriptionofspots">
-                    Mountain Putuo is the awakening position of bodhisattva Guanyin.
+                    Mountain Putuo is the awakening position of bodhisattva Guanyin. (Hover on the image to see more)
                 </div>
 
 
@@ -169,7 +169,7 @@
                     <a href="https://en.wikipedia.org/wiki/Santorini">Santorini Island</a>
                 </div>
                 <div class="descriptionofspots">
-                    Santorini island is famous for the incredible sunset
+                    Santorini island is famous for the incredible sunset. (Hover on the image to see more)
                 </div>
 
 
