contact&travel&hunt

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         alert("Hello! If you are using mobile, please place the phone HOZIRONTALLY!");
     }
 </script>
-<body onload="phone()">
+<body>
 <div class="container">
     <div class="skip"><a href="#main">Jump to Content</a></div>
     <header>
