--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         alert("Hello! If you are using mobile, please place the phone HOZIRONTALLY!");
     }
 </script>
-<body onload="phone()">
+<body >
 
 <div class="container">
 
