--- a/travel.html
+++ b/travel.html
@@ -185,7 +185,7 @@
 
                         <div class="flip-card-back">
                             <a href="https://www.santorini.net/">
-                                Santorini is regarded by many as the Greek island of their dreams, and countless beautiful pictures about the island appear in countless travel brochures and Instagram photos. However, Santorini is more than just a small blue island. She is beautiful and at the same time mysterious.
+                                Santorini is regarded by many as the Greek island of their dreams, and countless beautiful pictures about the island.
                             </a>
                         </div>
                     </div>
