--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 
                     <div id="basic_information">
                         <p>Chao Xu</p>
-                        <p>Mobile: 7344507749(US)  13957446055(China)</p>
+                        <p>Mobile:</p>
+                        <p>7344507749(US)</p>
+                        <p>13957446055(China)</p>
                         <p>Email: xuchaozj@umich.edu</p>
                         <p>B.S.E in Shanghai Jiao Tong University</p>
                         <p>Electrical and Computer Engineering </p>
