--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
                         <p>Mobile:</p>
                         <p>7344507749(US)</p>
                         <p>13957446055(China)</p>
-                        <p>Email: xuchaozj@umich.edu</p>
+                        <p>Email: xuchaozj@umich.edu<br><br></p>
+
                         <p>B.S.E in Shanghai Jiao Tong University</p>
-                        <p>Electrical and Computer Engineering </p>
-                        <p>MSI in University of Michigan School of Information</p>
+                        <p>Electrical and Computer Engineering<br><br> </p>
+
+                        <p>MSI in University of Michigan</p>
                         <p>Information Science</p>
                     </div>
                 </div>
