--- a/travel.html
+++ b/travel.html
@@ -44,7 +44,7 @@
 
 
         <div class="spots">
-            <div id="songshan" class="spot">
+            <div id="songshan" class="spotl">
                 <div class="titleofspots">
                     <a href="https://en.wikipedia.org/wiki/Mount_Song">Mount Song</a>
                 </div>
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div id="wutai" class="spot">
+            <div id="wutai" class="spotr">
                 <div class="titleofspots">
                     <a href="https://en.wikipedia.org/wiki/Mount_Wutai">Mount Wutai</a>
                 </div>
@@ -128,7 +128,7 @@
                 </div>
             </div>
 
-            <div id="putuo" class="spot">
+            <div id="putuo" class="spotl">
                 <div class="titleofspots">
                     <a href="https://en.wikipedia.org/wiki/Mount_Putuo">Mount Putuo</a>
                 </div>
@@ -164,7 +164,7 @@
                 </div>
             </div>
 
-            <div id="santorini" class="spot">
+            <div id="santorini" class="spotr">
                 <div class="titleofspots">
                     <a href="https://en.wikipedia.org/wiki/Santorini">Santorini Island</a>
                 </div>
